--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-<!--
+        <!--
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="fa fa-bars  fa-2x"></span>
             </button>
-        </div>-->
+        </div>
+        -->
 
         <div class="container-fluid">
             <ul class="nav navbar-nav">
@@ -142,7 +143,7 @@
                 <p>If you want to get in touch, you can contact us at:</p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="mailto:piperift@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                        <a href="mailto:info@piperift.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
                         <a href="https://twitter.com/piperift" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
                 </ul>
