--- a/index.html
+++ b/index.html
@@ -101,27 +101,49 @@
             <div class="col-lg-10 col-lg-offset-1">
                 <h2>Team</h2>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="member col-lg-4">
                         <h4>Miguel Fernandez<br>
                         <small>Creative Director & Programmer</small>
+                        <p>
+                            <a href="https://twitter.com/muitxer"><i class="fa fa-twitter fa-fw"></i></a>
+                            <a href="https://www.linkedin.com/in/muitxer"><i class="fa fa-linkedin fa-fw"></i></a>
+                            <a href="mailto:miguel_3c@hotmail.com"><i class="fa fa-envelope fa-fw"></i></a>
+                        </p>
                         </h4>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="member col-lg-4">
+                        <h4>Miguel Coronado<br>
+                        <small>3D Artist</small>
+                        </h4>
+                    </div>
+
+                    <div class="member col-lg-4">
+                        <h4>Antonio Serón<br>
+                        <small>Scriptwriter</small>
+                        </h4>
+                    </div>
+
+                    <div class="member col-lg-4">
                         <h4>Jorge Herrero<br>
                         <small>Designer</small>
+                        <p>
+                            <a href="https://twitter.com/jorgehi_"><i class="fa fa-twitter fa-fw"></i></a>
+                            <a href="https://es.linkedin.com/in/jorge-herrero-7441093a"><i class="fa fa-linkedin fa-fw"></i></a>
+                            <a href="mailto:joheil94@gmail.com"><i class="fa fa-envelope fa-fw"></i></a>
+                        </p>
                         </h4>
                     </div>
 
-                    <div class="col-lg-4">
+                    <div class="member col-lg-4">
                         <h4>Carlos Ramiro<br>
                         <small>Designer</small>
                         </h4>
                     </div>
 
-                    <div class="col-lg-4">
-                        <h4>Miguel Coronado<br>
-                        <small>3d Artist</small>
+                    <div class="member col-lg-4">
+                        <h4>Isabel Royán<br>
+                        <small>Composer & Sound Designer</small>
                         </h4>
                     </div>
                 </div>
