New titles, added more content, improved header styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="assets/css/nucleo-icons.css" type="text/css">
   <script src="assets/js/navbar-ontop.js"></script>
   <link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-  <title>Now UI Kit by Creative Tim</title>
+  <title>Piperift</title>
   <meta name="description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free.">
   <meta name="keywords" content="bootstrap 4, bootstrap 4 uit kit, bootstrap 4 kit, now ui, now ui kit, creative tim, html kit, html css template, web template, bootstrap, bootstrap 4, css3 template, frontend, responsive bootstrap template, bootstrap ui kit, responsive ui kit">
   <link rel="stylesheet" href="style.css"> </head>
@@ -18,7 +18,7 @@
 <body class="">
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" title="Designed by Invision. Coded by Creative Tim and Pingendo" data-placement="bottom" data-toggle="tooltip" href="#">PIPERIFT</a>
+      <a class="navbar-brand" href="#">PIPERIFT</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNowUIKitFree">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,14 +36,18 @@
         <a class="btn btn-light text-primary" href="#pro">
           <i class="now-ui-icons arrows-1_share-66 mr-1"></i>Get in Touch</a>
         <ul class="navbar-nav flex-row justify-content-center mt-2 mt-md-0">
+          <li class="nav-item mx-3 mx-md-1">
+            <a class="nav-link" href="#" data-placement="bottom" data-toggle="tooltip" title="Join our Discord">
+              <img height="18px" width="24px" src="assets/img/logos/discord.svg" style="fill: white;"> </a>
+          </li>
           <li class="nav-item mx-1">
             <a class="nav-link" href="#" data-placement="bottom" data-toggle="tooltip" title="Follow us on Twitter">
               <i class="fa fa-fw fa-twitter fa-2x"></i>
             </a>
           </li>
-          <li class="nav-item mx-3 mx-md-1">
-            <a class="nav-link" href="#" data-placement="bottom" data-toggle="tooltip" title="Like us on Facebook">
-              <i class="fa fa-fw fa-facebook-official fa-2x"></i>
+          <li class="nav-item ml-1">
+            <a class="nav-link" href="#" data-placement="bottom" data-toggle="tooltip" title="See our Github">
+              <i class="fa fa-fw fa-2x fa-github"></i>
             </a>
           </li>
           <li class="nav-item ml-1">
@@ -55,13 +59,16 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center parallax cover gradient-overlay" style="background-image: url(&quot;./assets/img/header.jpg&quot;); position: relative; background-position: center center; background-size: cover;">
+  <div class="py-5 text-center parallax cover gradient-overlay" style="background-image: url(&quot;./assets/img/header.jpg&quot;); position: relative; background-position: center center; background-size: cover; height: 100vh;">
     <div class="container d-flex flex-column">
       <div class="row my-auto">
         <div class="col-md-12 text-white">
           <img class="mb-5" src="assets/img/logos/logo.png" width="100">
           <h1 class="mb-3 display-1">PIPERIFT</h1>
           <h3 class="mb-5">We make and help making games</h3>
+          <a href="#games" class="page-scroll btn">
+            <i class="fa fa-3x fa-fw fa-angle-down"></i>
+          </a>
         </div>
       </div>
       <div class="row py-3">
@@ -129,22 +136,22 @@
         <div class="col-md-3 align-self-center text-center p-4">
           <i class="d-block fa fa-3x fa-cubes"></i>
           <h3 class="my-2">Robust</h3>
-          <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="">Iteration is how we ensure our plugins are mature and robust. They won't break easily</p>
         </div>
         <div class="col-md-3 align-self-center text-center p-4">
           <i class="d-block  fa fa-exchange fa-3x"></i>
           <h3 class="my-2">Flexible</h3>
-          <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="">Adaptable to many game genres or applications</p>
         </div>
         <div class="col-md-3 align-self-center text-center p-4">
           <i class="d-block  fa fa-bug fa-3x"></i>
           <h3 class="my-2">Tested</h3>
-          <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="">Hundreds of tests to ensure everything works as intended</p>
         </div>
         <div class="col-md-3 align-self-center text-center p-4">
           <i class="d-block  fa fa-wrench fa-3x"></i>
           <h3 class="my-2">Real usage</h3>
-          <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <p class="">Used in real internal and external game projects that make plugins evolve</p>
         </div>
         <div class="col-md-6 p-4">
           <div class="row">
@@ -153,7 +160,8 @@
             </div>
             <div class="col-sm-9">
               <h3 class="">Architecture Design</h3>
-              <p class="">Our code is always well structured and designed to do its best at what it does while keeping everything as simple as posible. Always start a house from its fundations .</p>
+              <p class="">Code is always well structured and designed to do its best at what it does while keeping everything as simple as posible. Always start a house from its fundations
+                <br> </p>
             </div>
           </div>
         </div>
@@ -164,7 +172,8 @@
             </div>
             <div class="col-sm-9">
               <h3 class="">Performant</h3>
-              <p class="">Fast, light</p>
+              <p class="">Fast and light code. All plugins get analyzed to keep performance low and cheap
+                <br> </p>
             </div>
           </div>
         </div>
@@ -192,9 +201,11 @@
             <div class="col-md-12">
               <h1 class="display-1">We collaborate with</h1>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-4">
+                  <img class="d-block mx-auto" src="assets/img/logos/nmrih2.png" height="150px"> </div>
+                <div class="col-md-4">
                   <img src="assets/img/logos/epicgames.png" class="d-block mx-auto" height="150px"> </div>
-                <div class="col-md-6">
+                <div class="col-md-4">
                   <img class="d-block mx-auto" src="assets/img/logos/frontwire.png" height="150px"> </div>
               </div>
             </div>
@@ -1277,15 +1288,6 @@
           </a>
         </div>
       </div>
-      <div class="row py-5" id="pro">
-        <div class="col-md-8 mx-auto text-center">
-          <h2 class="mb-4"> Want more? </h2>
-          <p class="lead mb-5"> We've just launched this Now UI Kit. A PRO version is coming with a huge number of components, sections and example pages. Contact Pingendo or Creative Tim and let us know that you want it.</p>
-          <a class="btn btn-light mr-1 rounded btn-lg text-primary"
-            href="https://www.creative-tim.com/contact-us" target="_blank">
-            <i class="now-ui-icons arrows-1_share-66 mr-1"></i> Ask for the PRO version</a>
-        </div>
-      </div>
       <div class="row mt-4 py-5">
         <div class="col-md-12 text-center">
           <h3 class="mb-5 text-center">Thank you for supporting us!</h3>
@@ -1308,89 +1310,27 @@
           <ul class="list-inline text-muted d-flex justify-content-center justify-content-md-start mb-4">
             <li class="list-inline-item mx-2">
               <a href="https://www.creative-tim.com/" class="text-light" target="_blank">
-                <small>CREATIVE TIM</small>
+                <small>PIPERIFT</small>
               </a>
             </li>
             <li class="list-inline-item mx-2">
               <a href="http://presentation.creative-tim.com/" class="text-light" target="_blank">
-                <small>ABOUT US</small>
+                <small>PLUGINS</small>
               </a>
             </li>
             <li class="list-inline-item mx-2">
               <a href="http://blog.creative-tim.com/" class="text-light" target="_blank">
-                <small>BLOG</small>
-              </a>
-            </li>
-            <li class="list-inline-item mx-2">
-              <a href="https://github.com/creativetimofficial/now-ui-kit/blob/master/LICENSE.md" class="text-light" target="_blank">
-                <small>LICENSE</small>
+                <small>GAMES</small>
               </a>
             </li>
           </ul>
         </div>
         <div class="col-12 col-sm-6 pr-0 text-right d-flex justify-content-center justify-content-md-end">
           <li class="list-inline-item text-light mb-4">
-            <small> © 2018, Designed by
-              <a href="https://www.invisionapp.com/" target="_blank" class="text-white">Invision</a>. Coded by
-              <a href="https://www.creative-tim.com/" target="_blank" class="text-white">Creative Tim</a> and
-              <a href="https://www.pingendo.com/" target="_blank" class="text-white">Pingendo</a>. </small>
+            <small> © 2018, Piperift. All rights reserved.</small>
           </li>
         </div>
         <div> </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="modal1">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header pb-0">
-          <h4 class="modal-title text-dark mx-auto">
-            <b>MODAL TITLE</b>
-          </h4>
-          <button type="button" class="close text-danger pt-4 ml-0" data-dismiss="modal">
-            <span>
-              <i class="now-ui-icons ui-1_simple-remove lg"></i>
-            </span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <p class="m-0">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden
-            flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-        </div>
-        <div class="modal-footer d-flex flex-row justify-content-between">
-          <button type="button" class="btn btn-secondary">Nice Button</button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="modal2">
-    <div class="modal-dialog modal-sm" role="document">
-      <div class="modal-content text-center bg-primary">
-        <div class="modal-body">
-          <button class="btn btn-light btn-lg btn-icon rounded shadow" type="button">
-            <i class="now-ui-icons users_circle-08 text-primary x2"></i>
-          </button>
-          <p class="m-4"> Always have an access to your profile </p>
-          <button type="button" class="btn btn-primary mr-3">BACK</button>
-          <button type="button" class="btn btn-primary ml-3" data-dismiss="modal"> CLOSE </button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6"></div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6"></div>
       </div>
     </div>
   </div>
@@ -1410,9 +1350,6 @@
             });
           });
   </script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 10px;right:10px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:250px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;
-    <img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16">
-  </pingendo>
 </body>
 
 </html>
