Added piperift fonts, better styles, smooth navigation

--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
 <body class="">
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">PIPERIFT</a>
+      <a class="navbar-brand navbar-title py-1 page-scroll" href="#">PipeRift</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNowUIKitFree">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse text-center justify-content-end" id="navbarNowUIKitFree">
         <ul class="navbar-nav">
           <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
-            <a class="nav-link" href="#plugins">
+            <a class="nav-link page-scroll" href="#plugins">
               <i class="fa fa-cog fa-2x mr-2"></i>PLUGINS</a>
           </li>
           <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
-            <a class="nav-link" href="#games">
+            <a class="nav-link page-scroll" href="#games">
               <i class="fa mr-2 fa-gamepad fa-2x"></i>GAMES</a>
           </li>
           <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
-            <a class="nav-link" href="#about-us"> ABOUT US</a>
+            <a class="nav-link page-scroll" href="#about-us"> ABOUT US</a>
           </li>
         </ul>
         <ul class="navbar-nav flex-row justify-content-center mt-2 mt-md-0">
@@ -62,8 +62,8 @@
       <div class="row my-auto">
         <div class="col-md-12 text-white">
           <img class="mb-5" src="assets/img/logos/logo.png" width="100">
-          <h1 class="mb-3 display-1">PIPERIFT</h1>
-          <h3 class="mb-5">We make and help making games</h3>
+          <h1 class="mb-3 title display-2">PipeRift</h1>
+          <p class="lead my-4">We make and help making games</p>
           <a href="#games" class="page-scroll btn">
             <i class="fa fa-3x fa-fw fa-angle-down"></i>
           </a>
@@ -71,7 +71,7 @@
       </div>
       <div class="row py-3">
         <div class="col-md-12">
-          <h6 class="text-muted mb-5">CRAFTED BY
+          <h6 class="mb-5 text-light">CRAFTED BY
             <a href="https://muit.github.io">MUIT</a>
           </h6>
         </div>
@@ -94,7 +94,7 @@
                     <img class="card-img-top" src="assets/img/plugins/QuestExtension_Thumb.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">
+                      <a href="https://www.unrealengine.com/marketplace/quest-extension" class="btn btn-primary">
                         <i class="now-ui-icons shopping_shop mr-1"></i>39.99$</a>
                     </div>
                   </div>
@@ -104,9 +104,9 @@
                     <img class="card-img-top" src="assets/img/plugins/FactionsExtension_Thumbnail.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">
+                      <a href="https://www.unrealengine.com/marketplace/factions-extension" class="btn btn-primary">
                         <i class="now-ui-icons shopping_shop mr-1"></i>FREE</a>
-                      <a href="#" class="btn btn-secondary">DOCS</a>
+                      <a href="https://www.unrealengine.com/marketplace/factions-extension" class="btn btn-secondary">DOCS</a>
                     </div>
                   </div>
                 </div>
@@ -115,9 +115,9 @@
                     <img class="card-img-top" src="assets/img/plugins/AttributesExtension_Thumbnail.png" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">
+                      <a href="https://www.unrealengine.com/marketplace/attributes-extension" class="btn btn-primary">
                         <i class="now-ui-icons shopping_shop mr-1"></i>14.99$</a>
-                      <a href="#" class="btn btn-secondary">DOCS</a>
+                      <a href="https://www.unrealengine.com/marketplace/attributes-extension" class="btn btn-secondary">DOCS</a>
                     </div>
                   </div>
                 </div>
@@ -178,7 +178,7 @@
       </div>
     </div>
   </div>
-  <div class="py-5 text-center bg-dark">
+  <div class="py-5 text-center bg-dark" style="display: none;">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -301,22 +301,12 @@
       </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="assets/js/parallax.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/js/bootstrap-datepicker.js"></script>
-  <script>
-    $(document).ready(function(){
-            $('[data-toggle="popover"]').popover();   
-            $('[data-toggle="tooltip"]').tooltip();
-            $('#datepicker-example').datepicker({
-                calendarWeeks: true,
-                autoclose: true,
-                todayHighlight: true
-            });
-          });
-  </script>
+  <script src="assets/js/main.js"></script>
 </body>
-
 </html>
