--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="">
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand navbar-title py-1 page-scroll" href="#">PipeRift</a>
+      <a class="navbar-brand navbar-title py-1 page-scroll" href="#home">PipeRift</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNowUIKitFree">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -57,7 +57,7 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 text-center parallax cover gradient-overlay" style="background-image: url('./assets/img/header.png'); position: relative; background-position: center center; background-size: cover; height: 100vh;">
+  <div id="home" class="py-5 text-center parallax cover gradient-overlay" style="background-image: url('./assets/img/header.png'); position: relative; background-position: center center; background-size: cover; height: 100vh;">
     <div class="container d-flex flex-column">
       <div class="row my-auto">
         <div class="col-md-12 text-white">
@@ -284,13 +284,13 @@
           <img src="assets/img/logos/logo.png" width="60" class=""> </div>
         <div class="col-md-4 p-2 justify-content-center d-flex flex-column align-items-center">
           <ul class="list-unstyled text-right flex-row d-flex justify-content-end m-0">
-            <a href="#" class="text-white px-2">Home</a>
+            <a href="#home" class="text-white px-2 page-scroll">Home</a>
             <br>
-            <a href="#plugins" class="text-white px-2">Plugins</a>
+            <a href="#plugins" class="text-white px-2 page-scroll">Plugins</a>
             <br>
-            <a href="#games" class="text-white px-2">Games</a>
+            <a href="#games" class="text-white px-2 page-scroll">Games</a>
             <br>
-            <a href="#about-us" class="text-white px-2">About Us</a>
+            <a href="#about-us" class="text-white px-2 page-scroll">About Us</a>
           </ul>
         </div>
       </div>
