--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
   <script src="assets/js/navbar-ontop.js"></script>
   <link rel="icon" href="assets/img/logo.ico">
   <title>Piperift</title>
-  <meta name="description" content="Start your development with a beautiful Bootstrap 4 UI kit. It is yours Free.">
-  <meta name="keywords" content="bootstrap 4, bootstrap 4 uit kit, bootstrap 4 kit, now ui, now ui kit, creative tim, html kit, html css template, web template, bootstrap, bootstrap 4, css3 template, frontend, responsive bootstrap template, bootstrap ui kit, responsive ui kit">
+  <meta name="description" content="Independent game studio creating tools and systems for UE4">
   <link rel="stylesheet" href="style.css"> </head>
 
 <body class="">
   <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand navbar-title py-1 page-scroll" href="#home">PipeRift</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNowUIKitFree">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse text-center justify-content-end" id="navbarNowUIKitFree">
+      <div class="collapse navbar-collapse text-center justify-content-end" id="navbar">
         <ul class="navbar-nav">
           <li class="nav-item mx-1 align-items-center d-flex justify-content-center">
             <a class="nav-link page-scroll" href="#plugins">
