Updated plugins info

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
   </nav>
-  <div id="home" class="py-5 text-center parallax cover gradient-overlay" style="background-image: url('./assets/img/header.png'); position: relative; background-position: center center; background-size: cover; height: 100vh;">
+  <div id="home" class="py-5 text-center parallax cover gradient-overlay" style="background-image: url('assets/img/header.png'); position: relative; background-position: center center; background-size: cover; height: 100vh;">
     <div class="container d-flex flex-column">
       <div class="row my-auto">
         <div class="col-md-12 text-white">
@@ -90,11 +90,26 @@
               <div class="row justify-content-center">
                 <div class="col-md-3 col-6 my-2">
                   <div class="card">
-                    <img class="card-img-top" src="assets/img/plugins/QuestExtension_Thumb.png" alt="Card image cap">
+                    <img class="card-img-top" src="assets/img/plugins/QuestExtension_Thumbnail.png" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">A fully featured, non-linear and flexible Quest System for Unreal Engine 4</p>
                       <a href="https://www.unrealengine.com/marketplace/quest-extension" class="btn btn-primary">
-                        <i class="now-ui-icons shopping_shop mr-1"></i>39.99$</a>
+                        <i class="now-ui-icons shopping_shop mr-1"></i>
+                        39.99$
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-3 col-6 my-2">
+                  <div class="card">
+                    <img class="card-img-top" src="assets/img/plugins/SaveExtension_Thumbnail.png" alt="Card image cap">
+                    <div class="card-body">
+                      <p class="card-text">Automatic game saving system with open-world support</p>
+                      <a href="https://www.unrealengine.com/marketplace/save-extension" class="btn btn-primary">
+                        <i class="now-ui-icons shopping_shop mr-1"></i>
+                        FREE
+                      </a>
+                      <a href="https://piperift.com/SaveExtension" class="btn btn-secondary">DOCS</a>
                     </div>
                   </div>
                 </div>
@@ -102,10 +117,12 @@
                   <div class="card">
                     <img class="card-img-top" src="assets/img/plugins/FactionsExtension_Thumbnail.png" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Adds factions and relations for Blueprints or C++</p>
                       <a href="https://www.unrealengine.com/marketplace/factions-extension" class="btn btn-primary">
-                        <i class="now-ui-icons shopping_shop mr-1"></i>FREE</a>
-                      <a href="https://www.unrealengine.com/marketplace/factions-extension" class="btn btn-secondary">DOCS</a>
+                        <i class="now-ui-icons shopping_shop mr-1"></i>
+                        FREE
+                      </a>
+                      <a href="https://piperift.com/FactionsExtension" class="btn btn-secondary">DOCS</a>
                     </div>
                   </div>
                 </div>
@@ -113,10 +130,12 @@
                   <div class="card">
                     <img class="card-img-top" src="assets/img/plugins/AttributesExtension_Thumbnail.png" alt="Card image cap">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Lightweight attributes system for Unreal Engine 4</p>
                       <a href="https://www.unrealengine.com/marketplace/attributes-extension" class="btn btn-primary">
-                        <i class="now-ui-icons shopping_shop mr-1"></i>14.99$</a>
-                      <a href="https://www.unrealengine.com/marketplace/attributes-extension" class="btn btn-secondary">DOCS</a>
+                        <i class="now-ui-icons shopping_shop mr-1"></i>
+                        9.99$
+                      </a>
+                      <a href="https://piperift.com/AttributesExtension" class="btn btn-secondary">DOCS</a>
                     </div>
                   </div>
                 </div>
